# sdk-ruby

./: .gitignore  .gitmodules  .rubocop.yml  .yardopts  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  Rakefile  Steepfile  temporal.gemspec  temporalio.gemspec
bridge/: .env  Cargo.toml
bridge/src/: connection.rs  lib.rs  reactor.rs  runtime.rs  test_server.rs  worker.rs
temporalio/: .rubocop.yml  .yardopts  Cargo.toml  Gemfile  Rakefile  Steepfile  rbs_collection.lock.yaml  rbs_collection.yaml  temporalio.gemspec
temporalio/ext/: Cargo.toml  README.md  extconf.rb
temporalio/ext/.cargo/: config.toml
temporalio/ext/src/: client.rs  client_rpc_generated.rs  envconfig.rs  lib.rs  metric.rs  runtime.rs  testing.rs  util.rs  worker.rs
temporalio/extra/: memory_bench.rb  payload_visitor_gen.rb  proto_gen.rb  simple_bench.rb
temporalio/extra/sorbet_check/: Gemfile  check_types.rb
temporalio/lib/: temporalio.rb
temporalio/lib/protoc-gen-openapiv2/options/: annotations_pb.rb
temporalio/lib/temporalio/: activity.rb  api.rb  cancellation.rb  client.rb  common_enums.rb  converters.rb  env_config.rb  envconfig.rb  error.rb  internal.rb  metric.rb  priority.rb  retry_policy.rb  runtime.rb  scoped_logger.rb  search_attributes.rb  simple_plugin.rb  testing.rb  version.rb  versioning_override.rb  worker.rb  worker_deployment_version.rb  worker_versioning.rb  workflow.rb  workflow_history.rb
temporalio/lib/temporalio/activity/: cancellation_details.rb  complete_async_error.rb  context.rb  definition.rb  info.rb
temporalio/lib/temporalio/api/: operatorservice.rb  payload_visitor.rb  workflowservice.rb
temporalio/lib/temporalio/client/: activity_execution.rb  activity_execution_count.rb  activity_execution_status.rb  activity_handle.rb  activity_id_reference.rb  async_activity_handle.rb  connection.rb  implementation.rb  interceptor.rb  metadata_injection_interceptor.rb  metadata_provider.rb  nexus_client.rb  nexus_operation_execution_count.rb  nexus_operation_handle.rb  pending_activity_state.rb  plugin.rb  schedule.rb  schedule_handle.rb  with_start_workflow_operation.rb  workflow_execution.rb  workflow_execution_count.rb  workflow_execution_status.rb  workflow_handle.rb  workflow_query_reject_condition.rb  workflow_update_handle.rb  workflow_update_wait_stage.rb
temporalio/rbi/: temporalio.rbi
temporalio/rbi/google/: protobuf.rbi
temporalio/rbi/tapioca_baseline/: temporalio.rbi
temporalio/rbi/temporalio/: activity.rbi  api.rbi  cancellation.rbi  client.rbi  common_enums.rbi  converters.rbi  env_config.rbi  error.rbi  internal.rbi  metric.rbi  priority.rbi  retry_policy.rbi  runtime.rbi  scoped_logger.rbi  search_attributes.rbi  simple_plugin.rbi  testing.rbi  versioning_override.rbi  worker.rbi  worker_deployment_version.rbi  workflow.rbi  workflow_history.rbi
temporalio/sig/: common.rbs  open_telemetry.rbs  temporalio.rbs
temporalio/sig/google/: protobuf_compat.rbs
temporalio/sig/temporalio/: activity.rbs  api.rbs  cancellation.rbs  client.rbs  common_enums.rbs  converters.rbs  env_config.rbs  envconfig.rbs  error.rbs  internal.rbs  metric.rbs  priority.rbs  retry_policy.rbs  runtime.rbs  scoped_logger.rbs  search_attributes.rbs  simple_plugin.rbs  testing.rbs  version.rbs  versioning_override.rbs  worker.rbs  worker_deployment_version.rbs  workflow.rbs  workflow_history.rbs
temporalio/smoke_test/: smoke_test_gem.rb
temporalio/test/: activity_info_standalone_test.rb  base64_codec.rb  cancellation_test.rb  client_activity_async_completion_test.rb  client_activity_hints_test.rb  client_activity_interceptor_chain_test.rb  client_activity_operator_commands_build_test.rb  client_activity_operator_commands_interceptor_test.rb  client_activity_operator_commands_test.rb  client_activity_test.rb  client_cloud_test.rb  client_connection_test.rb  client_nexus_test.rb  client_schedule_test.rb  client_test.rb  client_workflow_interceptor_chain_test.rb  client_workflow_test.rb  deadlock_test.rb  envconfig_test.rb  extra_assertions.rb  gc_utils.rb  plugin_test.rb  proto_gen_test.rb  rbi_parse_test.rb  rbi_untyped_count_test.rb  runtime_test.rb  scoped_logger_test.rb  search_attributes_test.rb  test.rb  test_base.rb  test_helper.rb  type_signature_coverage_test.rb  worker_activity_test.rb  worker_payload_size_limits_test.rb  worker_test.rb  worker_workflow_activity_test.rb  worker_workflow_child_test.rb  worker_workflow_external_test.rb  worker_workflow_handler_test.rb  worker_workflow_nexus_test.rb  (+4 more)
temporalio/test/api/: payload_visitor_test.rb
temporalio/test/client/: activity_id_reference_test.rb
temporalio/test/contrib/: open_telemetry_test.rb  tool_registry_session_test.rb  tool_registry_test.rb  tool_registry_testing_test.rb
temporalio/test/converters/: data_converter_test.rb  failure_converter_test.rb  payload_converter_test.rb
temporalio/test/golangworker/: go.mod  go.sum  main.go
temporalio/test/sig/: activity_info_standalone_test.rbs  client_activity_async_completion_test.rbs  client_activity_hints_test.rbs  client_activity_interceptor_chain_test.rbs  client_activity_operator_commands_build_test.rbs  client_activity_operator_commands_interceptor_test.rbs  client_activity_operator_commands_test.rbs  client_activity_test.rbs  client_test.rbs  client_workflow_interceptor_chain_test.rbs  client_workflow_test.rbs  deadlock_test.rbs  envconfig_test.rbs  extra_assertions.rbs  gc_utils.rbs  proto_gen_test.rbs  runtime_test.rbs  test.rbs  test_base.rbs  type_signature_coverage_test.rbs  worker_activity_test.rbs  worker_payload_size_limits_test.rbs  worker_test.rbs  worker_workflow_priority_test.rbs  worker_workflow_test.rbs  worker_workflow_versioning_test.rbs  workflow_utils.rbs
temporalio/test/support/: rbi_paths.rb  sig_applicator.rb  sig_applicator_test.rb
temporalio/test/testing/: activity_environment_test.rb  workflow_environment_test.rb
temporalio/test/worker/: thread_pool_test.rb  workflow_instance_scheduler_test.rb  workflow_instance_test.rb  workflow_replayer_test.rb
temporalio/test/workflow/: definition_test.rb
(+981 files in other folders)
