[package]
name = "bridge"
version = "0.0.1"
authors = ["Anthony D <anthony@temporal.io>"]
edition = "2021"
repository = "https://github.com/temporalio/sdk-ruby"

[dependencies]
lazy_static = "1.4.0"
prost = "0.11"
rutie = "0.8.4"
temporal-client = { version = "0.1.0", path = "./sdk-core/client" }
temporal-sdk-core = { version = "0.1.0", path = "./sdk-core/core" }
temporal-sdk-core-api = { version = "0.1.0", path = "./sdk-core/core-api" }
temporal-sdk-core-protos = { version = "0.1.0", path = "./sdk-core/sdk-core-protos" }
thiserror = "1.0.31"
tokio = "1.15"
tonic = "0.8"
url = "2.2"

[lib]
name = "bridge"
crate-type = ["dylib"]

[target.aarch64-unknown-linux-gnu]
rustflags = ["-C", "linker=aarch64-linux-gnu-gcc"]

[package.metadata.thermite]
github_releases = true
