[package]
name = "temporal-sdk-ruby-bridge"
version = "0.1.1"
authors = ["Anthony D <anthony@temporal.io>"]
edition = "2021"
repository = "https://github.com/temporalio/sdk-ruby"

[dependencies]
anyhow = "1.0"
lazy_static = "1.4.0"
parking_lot = { version = "0.12", features = ["send_guard"] }
prost = "0.11"
rutie = { version = "0.8.4", features = ["no-link"] }
temporal-client = { version = "0.1.0", path = "./sdk-core/client" }
temporal-sdk-core = { version = "0.1.0", path = "./sdk-core/core" }
temporal-sdk-core-api = { version = "0.1.0", path = "./sdk-core/core-api" }
temporal-sdk-core-protos = { version = "0.1.0", path = "./sdk-core/sdk-core-protos" }
thiserror = "1.0.31"
tokio = "1.23"
tokio-util = "0.7.4"
tonic = "0.8"
url = "2.2"

[lib]
name = "temporal_sdk_ruby_bridge"
crate-type = ["dylib"]

[package.metadata.thermite]
github_releases = true
