[workspace]
members = ["./ext"]
resolver = "2"

[workspace.package]
license = "MIT"
license-file = "LICENSE"

[workspace.dependencies]
derive_builder = "0.20"
derive_more = { version = "0.99", default-features = false, features = ["constructor", "display", "from", "into"] }
once_cell = "1.16"
tonic = "0.11"
tonic-build = "0.11"
opentelemetry = "0.23"
prost = "0.12"
prost-types = "0.12"

[workspace.lints.rust]
unreachable_pub = "warn"