# Ruby and rb-sys seem to require a Cargo.toml here at the gem root (see https://github.com/oxidize-rb/rb-sys/issues/405),
# and Rust is broken if one workspace is nested within another without the ability to exclude (see
# https://github.com/rust-lang/cargo/issues/6745). So we basically must copy sdk-core's workspace for now.
# TODO(cretz): Fix this situation if possible without moving sdk-core submodule.

[workspace]
members = ["./ext"]
resolver = "2"

[workspace.package]
license = "MIT"
license-file = "LICENSE"

[workspace.dependencies]
bon = { version = "3", features = ["implied-bounds"] }
derive_builder = "0.20"
derive_more = { version = "2.0", features = [
  "constructor",
  "display",
  "from",
  "into",
  "debug",
  "try_into",
] }
thiserror = "2"
tonic = "0.14"
tonic-prost = "0.14"
tonic-prost-build = "0.14"
opentelemetry = { version = "0.31", features = ["metrics"] }
prost = "0.14"
prost-types = { version = "0.7", package = "prost-wkt-types" }

[workspace.lints.rust]
unreachable_pub = "warn"
