[package]
name = "temporalio_bridge"
version = "0.1.0"
edition = "2024"
authors = ["Chad Retz <chad@temporal.io>"]
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
futures = "0.3"
magnus = "0.7"
parking_lot = "0.12"
prost = "0.13"
rb-sys = "0.9"
temporal-client = { version = "0.1.0", path = "./sdk-core/client" }
temporal-sdk-core = { version = "0.1.0", path = "./sdk-core/core", features = ["ephemeral-server"] }
temporal-sdk-core-api = { version = "0.1.0", path = "./sdk-core/core-api", features = ["envconfig"] }
temporal-sdk-core-protos = { version = "0.1.0", path = "./sdk-core/sdk-core-protos" }
tokio = "1.37"
tokio-stream = "0.1"
tokio-util = "0.7"
tonic = "0.13"
tracing = "0.1"
url = "2.2"
