[package]
name = "temporalio_bridge"
version = "0.1.0"
edition = "2024"
authors = ["Chad Retz <chad@temporal.io>"]
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
async-trait = "0.1"
futures = "0.3"
log = "0.4"
magnus = "0.8"
parking_lot = "0.12"
prost = { workspace = true }
rb-sys = "0.9"
temporalio-client = { version = "0.1.0", path = "./sdk-core/crates/client" }
temporalio-common = { version = "0.1.0", path = "./sdk-core/crates/common", features = ["envconfig"] }
temporalio-sdk-core = { version = "0.1.0", path = "./sdk-core/crates/sdk-core", features = ["ephemeral-server"] }
tokio = "1.47"
tokio-stream = "0.1"
tokio-util = "0.7"
tonic = { workspace = true }
tracing = "0.1"
url = "2.5"
dhat = { version = "0.3", optional = true }

[features]
dhat-heap = ["dhat"]
