[package]
name = "temporalio_bridge"
version = "0.1.0"
edition = "2024"
authors = ["Chad Retz <chad@temporal.io>"]
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
async-trait = "0.1"
futures = "0.3"
log = "0.4"
magnus = "0.8"
parking_lot = "0.12"
prost = { workspace = true }
rb-sys = "0.9"
temporalio-client = { version = "0.4.0", path = "./sdk-core/crates/client", default-features = false, features = ["envconfig"] }
temporalio-common = { version = "0.4.0", path = "./sdk-core/crates/common", features = ["envconfig", "prometheus"] }
temporalio-sdk-core = { version = "0.4.0", path = "./sdk-core/crates/sdk-core", default-features = false, features = ["ephemeral-server"] }
tokio = "1.47"
tokio-stream = "0.1"
tokio-util = "0.7"
tonic = { workspace = true }
tracing = "0.1"
url = "2.5"
dhat = { version = "0.3", optional = true }
aws-lc-rs = { version = "1", features = ["fips"], optional = true }

[features]
default = ["otel-export", "tls-ring"]
dhat-heap = ["dhat"]
otel-export = ["temporalio-sdk-core/otel"]
tls-ring = ["temporalio-sdk-core/tls-ring", "temporalio-client/tls-ring"]
tls-aws-lc = ["temporalio-sdk-core/tls-aws-lc", "temporalio-client/tls-aws-lc"]
fips = ["otel-export", "tls-aws-lc", "dep:aws-lc-rs"]
